<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context="com.example.android.eartrainer432hzapp.MainActivity">

            <TextView
                android:id="@+id/problem_number_tv"
                style="@style/ProblemNumber"
                android:text="1." />

            <ImageButton
                android:id="@+id/sound_button"
                style="@style/ButtonStyle"
                android:layout_below="@id/problem_number_tv"
                android:onClick="playSoundOnClick"
                android:src="@drawable/sound_symb" />

            <EditText
                android:id="@+id/user_input"
                style="@style/UserInput"
                android:layout_below="@+id/sound_button"
                android:layout_centerHorizontal="true"
                android:inputType="textCapCharacters" />

            <Button
                android:id="@+id/submit_button"
                style="@style/ButtonStyle.Submit"
                android:layout_below="@id/user_input"
                android:onClick="submit_button"
                android:text="@string/submit_button_string" />

            <Button
                android:id="@+id/hint_button"
                style="@style/ButtonStyle.Submit.Hint"
                android:onClick="increment_hints_shown"
                android:text="@string/hint_button_label" />

            <RadioGroup
                android:id="@+id/radio_group_1"
                style="@style/RadioGroupStyle"
                android:layout_above="@id/hint_button"
                android:layout_below="@id/submit_button">

                <RadioButton
                    android:id="@+id/radio_button_1"
                    style="@style/RadioButtonStyle"
                    android:onClick="set_rb_value1"
                    android:text="" />

                <RadioButton
                    android:id="@+id/radio_button_2"
                    style="@style/RadioButtonStyle"
                    android:onClick="set_rb_value2"
                    android:text="" />

                <RadioButton
                    android:id="@+id/radio_button_3"
                    style="@style/RadioButtonStyle"
                    android:onClick="set_rb_value3"
                    android:text="" />

                <RadioButton
                    android:id="@+id/radio_button_4"
                    style="@style/RadioButtonStyle"
                    android:onClick="set_rb_value4"
                    android:text="" />
            </RadioGroup>

            <TextView
                android:id="@+id/number_hints_shown"
                style="@style/Scores.Hints"
                android:layout_alignParentBottom="true"
                android:text="@string/number_hints_shown_initial" />

            <TextView
                android:id="@+id/number_incorrect"
                style="@style/Scores"
                android:layout_above="@id/number_hints_shown"
                android:text="@string/number_incorrect_initial" />

            <TextView
                android:id="@+id/number_correct"
                style="@style/Scores"
                android:layout_above="@id/number_incorrect"
                android:text="@string/number_correct_initial" />

            <Button
                style="@style/ButtonStyle.Radio"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:onClick="show_multiple_choice"
                android:text="Show Multiple Choice " />


        </RelativeLayout>
    </LinearLayout>
</ScrollView>